<resources>

    <!--    STRINGS IN ALPHABETICAL ORDER-->

    <string name="about">About</string>
    <string name="about_pablo">Quotation Shake by \n\n Pablo Mocholí \n\n pabmocpl@inf.upv.es \n\n 2021</string>
    <string name="app_name">myQuote</string>
    <string name="author_info">Author info</string>

    <string name="dialog_delete_quotation_message">Are you sure that you want to delete this quotation?</string>

    <string name="english">English</string>

    <string name="get" translatable="false">GET</string>

    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet consectetur adipiscing elit penatibus duis,
        velit volutpat dignissim mi curae facilisi dictumst fringilla,
        fermentum etiam convallis molestie primis venenatis eu faucibus.
        Commodo arcu phasellus faucibus tristique litora donec, et lectus dictumst
        interdum accumsan pretium aliquam, metus velit aptent id proin. Blandit quam
        mi feugiat nam ut eros malesuada praesent, fusce molestie sapien tempor penatibus
        proin aptent, ullamcorper fames orci netus risus arcu curabitur.
    </string>

    <string name="post" translatable="false">POST</string>

    <string name="quote_fav">Favourite Quotations</string>
    <string name="quote_get">Get Quotations</string>
    <string name="quote_random">Random quotations</string>
    <string name="quote_shake">QuotationShake</string>

    <string name="refresh_label">Hello %1s! \n\n Press Refresh to get a new quotation</string>
    <string name="russian">Russian</string>

    <string name="sample_author">This is a sample author</string>
    <string name="sample_name">Nameless One</string>
    <string name="sample_quote">Quotation number</string>
    <string name="settings">Settings</string>
    <string name="settings_language_label">Quotations will be received in the selected language</string>
    <string name="settings_method_label">Web requests will be performed using the selected HTTP method</string>
    <string name="settings_name_label">Name that identifies the user</string>
    <string name="settings_name_text">Insert your name</string>

    <string name="toast_unknown_author">The author is unknown</string>
    <string name="yes">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="add">Add</string>
    <string name="refresh">Refresh</string>
    <string name="clear">Clear all</string>
    <string name="dialog_delete_all_quotation_message">Are you sure that you want to delete ALL your favourite quotations?</string>

    <string name="pref_name">User name</string>
    <string name="pref_name_d">Name that identifies the user</string>
    <string name="pref_language">Quotation language</string>
    <string name="pref_language_d">Quotations will be received in the selected language</string>
    <string name="pref_method">HTTP request method</string>
    <string name="pref_method_d">Web requests will be performed using the selected HTTP method</string>
    <string name="pref_database">Database access method</string>
    <string name="pref_database_d">Database will be accessed following the selected method</string>
    <string name="web_service_category">Web service</string>
    <string name="database_category">Database</string>
    <string name="sqlite" translatable="false">SQLiteOpenHelper</string>
    <string name="room" translatable="false">Room</string>

    <string name="pref_database_key" translatable="false">pref_database</string>
    <string name="pref_name_key" translatable="false">pref_name</string>
    <string name="pref_language_key" translatable="false">pref_language</string>
    <string name="pref_method_key" translatable="false">pref_method</string>
    <string name="toast_no_network">No network available</string>


</resources>